--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="profilepic" src="images/arun ppc.png" alt="Arun image" />
+        <img class="profilepic" src="images/worker.png" alt="Arun image" />
         <h2>Hello.</h2>
         <p class="profiledes">I'm a Computer Sciene Student, I'm learning Web Development & Web Designing. I'm really really interested in it.</p>
       </div>
@@ -27,7 +27,7 @@
         <div class="skill-row">
           <img class="skill1-img" src="images/skills1.png" alt="skills img" />
           <h3>Web Development</h3>
-          <p>I'm a web developer still at beginnier's level. Recently I've been doing lots in Web Development and I'll be a master in web development. It's just a beginning and my way didn't stop yet!</p>
+          <p>I'm a web developer still at beginner's level. Recently I've been doing lots in Web Development and I'll be a master in web development. It's just a beginning and my way didn't stop yet!</p>
         </div>
         <div class="skill-row">
           <img class="skill2-img" src="images/skills2.png" alt="skills img" />
