--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="profilepic" src="images/worker.png" alt="Arun image" />
+        <img class="profilepic" src="images/programmer.png" alt="Arun image" />
         <h2>Hello.</h2>
         <p class="profiledes">I'm a Computer Sciene Student, I'm learning Web Development & Web Designing. I'm really really interested in it.</p>
       </div>
@@ -25,7 +25,7 @@
       <div class="skills">
         <h2>My Skills</h2>
         <div class="skill-row">
-          <img class="skill1-img" src="images/skills1.png" alt="skills img" />
+          <img class="skill1-img" src="images/Skills1.png" alt="skills img" />
           <h3>Web Development</h3>
           <p>I'm a web developer still at beginner's level. Recently I've been doing lots in Web Development and I'll be a master in web development. It's just a beginning and my way didn't stop yet!</p>
         </div>
