--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="profilepic" src="images/programmer.png" alt="Arun image" />
+        <img class="profilepic" src="images/worker.png" alt="Arun image" />
         <h2>Hello.</h2>
         <p class="profiledes">I'm a Computer Sciene Student, I'm learning Web Development & Web Designing. I'm really really interested in it.</p>
       </div>
